Fix bug scroll into white space

--- a/frontend/static/css/main.css
+++ b/frontend/static/css/main.css
@@ -12153,6 +12153,7 @@ label {
   filter: url(#goo) blur(40px);
   width: 100%;
   height: 100%;
+  overflow: hidden;
 }
 .gradient-bg .g1 {
   position: absolute;
